...
                    RateSeed("AED", 4.211961),
                )

            private val DEFAULT_CURRENCIES =
                listOf(
                    Currency(0L, "USD", "$", "US Dollar", 2, true, 0),
                    Currency(0L, "EUR", "€", "Euro", 2, true, 1),
                    Currency(0L, "RUB", "₽", "Russian Ruble", 2, true, 2),
                    Currency(0L, "GBP", "£", "British Pound", 2, true, 3),
                    Currency(0L, "JPY", "¥", "Japanese Yen", 0, true, 4),
                    Currency(0L, "CNY", "¥", "Chinese Yuan", 2, true, 5),
                    Currency(0L, "KRW", "₩", "Korean Won", 0, true, 6),
                    Currency(0L, "INR", "₹", "Indian Rupee", 2, true, 7),
...
